[tool.poetry]
name = "yelp-beam"
version = "0.1.0"
description = ""
authors = ["Jack Perry <jack.e.perry@outlook.com>"]
readme = "README.md"
packages = [{include = "yelp_beam"}]

[tool.poetry.dependencies]
python = "~3.10"
apache-beam = "^2.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
