[tool.poetry]
name = "yelp-beam"
version = "0.1.0"
description = ""
authors = ["Jack Perry <jack.e.perry@outlook.com>"]
readme = "README.md"
packages = [{include = "yelp_beam"}]

[tool.poetry.dependencies]
python = "~3.10"
apache-beam = {extras = ["gcp"], version = "^2.46.0"}


[tool.poetry.group.file_linters.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
